# dx

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 426f92b1546d_add_support_ticket_system.py  4a753dad3902_baseline_year_specific_figures.py  8eddc69d44d1_baseline_first_run_date.py  90d2960b6eea_add_running_club_and_prior_experience_.py  9359b13eb026_guest_users_and_claims.py  a1c3f9e2b7d4_event_photo_thumbnail.py  a6cbd931b5e8_runner_baseline_stats.py  b7f3a1c9e4d2_signup_event_id.py  cad8412b864f_initial_schema.py  (+5 more)
backend/app/: main.py
backend/tests/: conftest.py  factories.py  test_account_export_delete.py  test_achievement_service.py  test_admin_tools_groups.py  test_admin_tools_support.py  test_auth.py  test_baseline_import.py  test_config.py  test_csv_import.py  test_email_templates.py  test_event_photos.py  test_events_pagination.py  test_fit_service.py  test_gpx_service.py  test_group_signups.py  test_guest_service.py  test_leaderboard_api.py  test_leaderboard_service.py  test_name_search.py  test_profile_completeness_service.py  test_profile_update_api.py  test_protocol.py  test_rating_api.py  test_rating_service.py  test_result_import_url.py  test_result_validation.py  test_safe_fetch.py  test_signup_switching.py  test_staff_api.py  test_stats_service.py  test_support_api.py  test_support_service.py  test_survey_api.py  test_survey_service.py  test_user_history_api.py
(+172 files in other folders)
